v0.3.4/_sources/api/hklpy2_solvers/diffcalc_solver/index.rst.txt
hklpy2_solvers.diffcalc_solver
==============================

.. py:module:: hklpy2_solvers.diffcalc_solver

.. autoapi-nested-parse::

   Solver wrapping *diffcalc-core* for hklpy2.

   Provides the :class:`DiffcalcSolver` class, which implements the
   :class:`hklpy2.backends.base.SolverBase` interface on top of the `diffcalc-core
   <https://github.com/DiamondLightSource/diffcalc-core>`_ library.  This library
   provides one geometry (You 1999, 4S+2D six-circle ``psic`` geometry).

   .. autosummary::

       ~DiffcalcSolver



Attributes
----------

.. autoapisummary::

   hklpy2_solvers.diffcalc_solver.ENERGY_REST_KEV
   hklpy2_solvers.diffcalc_solver.GEOMETRY_NAME
   hklpy2_solvers.diffcalc_solver.PSEUDO_AXES
   hklpy2_solvers.diffcalc_solver.REAL_AXES


Classes
-------

.. autoapisummary::

   hklpy2_solvers.diffcalc_solver.DiffcalcSolver


Module Contents
---------------

.. py:class:: DiffcalcSolver(geometry: str = GEOMETRY_NAME, **kwargs: Any)

   Bases: :py:obj:`hklpy2.backends.base.SolverBase`


   Solver for diffcalc-core (You 1999, 4S+2D six-circle 'psic' geometry).

   Wraps :class:`diffcalc.hkl.calc.HklCalculation` behind the
   :class:`~hklpy2.backends.base.SolverBase` interface so that hklpy2
   can use diffcalc-core for forward / inverse calculations.

   The only geometry supported is the You (1999) 4S+2D six-circle
   diffractometer with axes ``mu, delta, nu, eta, chi, phi``.

   Operating modes correspond to specific three-constraint combinations
   understood by diffcalc.

   This geometry has no extra parameters (``extras`` is always ``{}``).
   The :attr:`axes_w` property reports which real axes are computed by
   :meth:`forward` in the current mode; the remaining real axes are held
   constant (``axes_c``, derived by hklpy2's ``Core`` class).


   .. py:property:: UB
      :type: hklpy2.typing.Matrix3x3


      Orientation matrix (3x3).


   .. py:method:: addReflection(reflection: hklpy2.backends.typing.ReflectionDict) -> None

      Add coordinates of a diffraction condition (a reflection).



   .. py:property:: axes_w
      :type: list[str]


      Real axis names computed by :meth:`forward` in the current mode.

      These are the real axes *not* constrained to a fixed motor position
      by the current mode.  hklpy2's ``Core`` class derives ``axes_c``
      (constant axes) and ``axes_r`` (all real axes) from this list and
      :attr:`real_axis_names`.


   .. py:method:: calculate_UB(r1: hklpy2.backends.typing.ReflectionDict, r2: hklpy2.backends.typing.ReflectionDict) -> hklpy2.typing.Matrix3x3

      Calculate the UB matrix using two reflections (Busing & Levy).

      The ``r1`` and ``r2`` arguments are the contractual source of
      truth: any reflections previously held by the underlying
      ``diffcalc`` :class:`~diffcalc.ub.calc.UBCalculation` are
      cleared and the two named reflections are inserted before UB
      is computed.  See :issue:`58`.



   .. py:property:: extra_axis_names
      :type: list[str]


      Extra parameter names beyond the real motor axes.

      This geometry has no extra parameters; always returns ``[]``.


   .. py:property:: extras
      :type: dict[str, Any]


      Extra parameters beyond the real motor axes.

      This geometry has no extra parameters; always returns ``{}``.


   .. py:method:: forward(pseudos: hklpy2.typing.NamedFloatDict) -> list[hklpy2.typing.NamedFloatDict]

      Compute motor positions from pseudo-axis values (hkl -> angles).



   .. py:method:: geometries() -> list[str]
      :classmethod:


      Ordered list of geometry names supported by this solver.



   .. py:method:: inverse(reals: hklpy2.typing.NamedFloatDict) -> hklpy2.typing.NamedFloatDict

      Compute pseudo-axis values from motor positions (angles -> hkl).

      Works immediately after diffractometer creation even before any
      reflections have been added: a default identity UB is used in that
      case, and the all-zeros motor position maps to ``(h=0, k=0, l=0)``.



   .. py:property:: lattice
      :type: hklpy2.typing.NamedFloatDict


      Crystal lattice parameters.


   .. py:property:: mode
      :type: str


      Current operating mode.


   .. py:property:: modes
      :type: list[str]


      List of operating modes for this geometry.

      Includes both built-in modes and any user-registered modes
      (see :meth:`register_mode`).


   .. py:attribute:: name
      :value: 'diffcalc'


      Name of this Solver.


   .. py:property:: pseudo_axis_names
      :type: list[str]


      Ordered list of pseudo axis names.


   .. py:property:: real_axis_names
      :type: list[str]


      Ordered list of real axis names.


   .. py:method:: refineLattice(reflections: list[hklpy2.backends.typing.ReflectionDict]) -> hklpy2.typing.NamedFloatDict | None

      Refine lattice parameters from stored reflections.



   .. py:method:: register_mode(name: str, constraints: dict[str, Any]) -> None

      Register a new operating mode at runtime.

      Lets users add mode/constraint combinations that diffcalc-core
      implements but ``DiffcalcSolver`` does not ship by default,
      without forking the package.  The mode is validated against
      :class:`diffcalc.hkl.constraints.Constraints` before being
      accepted.

      PARAMETERS

      name : str
          Name to register the mode under, as a space-delimited
          list of the constraint names.  Order does not matter:
          ``"bisect fixed_mu fixed_nu"`` and
          ``"fixed_mu bisect fixed_nu"`` are treated as the same
          mode name (see :issue:`109`).  Must not clash, under
          this order-independent rule, with a built-in mode name
          or with a previously registered user mode (use
          :meth:`unregister_mode` first to redefine).
      constraints : dict[str, Any]
          Exactly three diffcalc constraints, keyed by diffcalc
          constraint name.  Float values pin the named axis at
          that value; ``True`` activates a boolean constraint
          (``a_eq_b``, ``bin_eq_bout``, ``bisect``).

      RAISES

      SolverError
          If ``name`` clashes with a built-in or already-registered
          mode; if ``constraints`` is not a dict of exactly three
          entries with diffcalc-recognised keys; if the combination
          does not survive ``Constraints(...).asdict`` round-trip
          (catches same-category conflicts that diffcalc silently
          collapses); or if
          :meth:`diffcalc.hkl.constraints.Constraints.is_current_mode_implemented`
          returns False.

      .. note::

         User-registered modes live only for the lifetime of this
         solver instance.  They are not persisted across hklpy2
         ``save_config`` / ``restore_config`` round-trips.



   .. py:method:: removeAllReflections() -> None

      Remove all reflections.



   .. py:method:: set_reals(reals: hklpy2.typing.NamedFloatDict) -> None

      Set current real-axis values (used by the presets feature).

      Called by ``hklpy2.Core.forward()`` before :meth:`forward` to push
      constant-axis values into the solver.  For diffcalc, constant axes are
      encoded in the :class:`~diffcalc.hkl.constraints.Constraints` object
      rather than in a geometry state, so this method only validates the
      input and is otherwise a no-op.

      .. note::
          ``set_reals`` is not yet part of
          :class:`~hklpy2.backends.base.SolverBase`; it was introduced via
          the hklpy2 presets feature.  Tracked upstream as
          `bluesky/hklpy2#347 <https://github.com/bluesky/hklpy2/issues/347>`_.



   .. py:method:: unregister_mode(name: str) -> None

      Remove a previously :meth:`register_mode`-registered mode.

      PARAMETERS

      name : str
          Name of the user-registered mode to remove.  Matched
          order-independently against the registered constraint
          names, so any permutation of the original name resolves
          to the same mode (see :issue:`109`).

      RAISES

      SolverError
          If ``name`` refers to a built-in mode (built-ins cannot
          be removed); if ``name`` is not currently registered.

      If the solver-side active :attr:`mode` is the one being
      removed, it is cleared to ``""``.  When the solver is wired
      into an hklpy2 ``Diffractometer``, the diffractometer's own
      cached ``core.mode`` may still hold the now-stale name and
      cause a "Mode unknown" ``ValueError`` on the next
      ``forward()`` call.  To avoid that, switch
      ``diffractometer.core.mode`` to a different mode before
      calling :meth:`unregister_mode` when the user mode is
      currently active.



   .. py:method:: update_mode_constraints(mode_name: str | None = None, **updates: float | bool) -> None

      Override constraint values on a previously-registered user mode.

      Sibling of :meth:`hklpy2_solvers.ad_hoc_solver.AdHocSolver.update_mode_constraints`
      for the diffcalc backend.  Replaces one or more constraint values
      in an existing user-registered mode without changing the mode's
      constraint names or structure.  Built-in modes are frozen and
      cannot be modified — register a variant under a new name with
      :meth:`register_mode` instead.

      :param mode_name: Name of the mode to update.  ``None`` (default) operates on
                        the active mode (:attr:`mode`).  Matched order-independently
                        against registered constraint-name sets, so any permutation
                        of the original name resolves to the same mode (see
                        :issue:`109`).
      :type mode_name: str, optional
      :param \*\*updates: Mapping of constraint name → new value.  Each key must
                          already exist as a constraint name in the resolved mode
                          (this method does not add or remove constraints — use
                          :meth:`unregister_mode` + :meth:`register_mode` for structural
                          changes).  Float values pin the named axis at that value;
                          ``True`` activates a boolean constraint (``a_eq_b``,
                          ``bin_eq_bout``, ``bisect``).
      :type \*\*updates: float or bool

      :raises SolverError: If ``mode_name`` is unknown; if it names a built-in mode
          (built-ins are frozen); if any kwarg names a constraint not
          present in the mode; or if the resulting constraint
          combination is rejected by diffcalc (same-category
          collision, not-implemented, etc.).

      .. rubric:: Notes

      Mutates the user-mode dict in place and clears
      :attr:`_applied_mode` so that a subsequent :meth:`forward` /
      :meth:`inverse` rebuilds the diffcalc
      :class:`~diffcalc.hkl.constraints.Constraints` object with the
      new values.  The mode's display name is unchanged.

      .. rubric:: Examples

      Register a custom mode then later override one value::

          solver.register_mode(
              "fixed_delta fixed_eta fixed_chi",
              {"delta": 0.0, "eta": 0.0, "chi": 0.0},
          )
          solver.update_mode_constraints(
              "fixed_delta fixed_eta fixed_chi", chi=45.0,
          )

      Operate on the currently active mode::

          solver.mode = "fixed_delta fixed_eta fixed_chi"
          solver.update_mode_constraints(chi=45.0)



   .. py:attribute:: version

      Version of this Solver.


   .. py:property:: wavelength
      :type: float | None


      Wavelength in Angstroms, for forward() and inverse().


.. py:data:: ENERGY_REST_KEV
   :value: 12.39842


   Product of photon energy (keV) and wavelength (Angstrom).

.. py:data:: GEOMETRY_NAME
   :value: 'diffcalc_4S_2D'


   Geometry name exposed to hklpy2.

.. py:data:: PSEUDO_AXES
   :value: ['h', 'k', 'l']


   Ordered pseudo axis names.

.. py:data:: REAL_AXES
   :value: ['mu', 'delta', 'nu', 'eta', 'chi', 'phi']


   Ordered real axis names (matching diffcalc Position.fields).

